[package]
name = "gin"
version = "0.0.1"
authors = ["Evangelos Maliaroudakis", "Giannis Melidonis", "Alexandra Alexandridi"]
edition = "2021"


[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.17"
prost = "0.11.8"
rand = "0.8.5"
rhai = "1.14.0"
serde_cbor = "0.11.2"
tokio = { version = "1.27.0" , features = ["rt-multi-thread", "macros"]}
tonic = "0.9.1"
tonic-reflection = "0.9.1"

[build-dependencies]
tonic-build = "0.9.1"

[[bin]]
name = "executor"
path = "src/executor/bin.rs"

[[bin]]
name = "scheduler"
path = "src/scheduler/bin.rs"

[[bin]]
name = "client"
path = "src/test.rs"
